# Privacy-Preserving-Multimodal-Photo-Intelligence-Evaluator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  database.py  main.py
backend/evaluation/: __init__.py  captioning.py  clustering.py  metrics.py  ranking.py  runner.py  search.py  vqa.py
backend/models/: __init__.py  base.py  blip_adapter.py  clip_adapter.py  registry.py
backend/preprocessing/: __init__.py  face_masking.py  pipeline.py  text_masking.py
backend/routes/: evaluation.py  images.py  results.py
backend/storage/: __init__.py  manager.py  schema.py
dashboard/: app.py
data/metadata/: best_shot_labels.json  images.csv  questions.json  retrieval_labels.json
docs/: architecture.md
scripts/: generate_sample_images.py  ingest_images.py  run_benchmark.py
tests/: test_api.py  test_evaluation.py  test_preprocessing.py
